--- a/rag_backend/kap_10_genomgång.ipynb
+++ b/rag_backend/kap_10_genomgång.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "495f1ffd-c832-4fd2-89f3-85bb958f75b8",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
     "# import os\n",
     "# api_key = api_key=os.getenv(\"API_KEY\")\n",
     "\n",
-    "api_key = 'AIzaSyCk_phuHoShoEncDqJheB5-i1TeXv1m6i8'\n",
+    "api_key = 'HEMLIGT'\n",
     "client = genai.Client(api_key=api_key)\n",
     "\n",
     "response = client.models.generate_content(\n",
